2015-09-08  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_request_preemption): Add PRIO argument and check
	the condition inside.
	(chx_timer_expired, chx_handle_intr): Call unconditionally.
	(intr_lock): New variable.
	(chx_handle_intr, chopstx_claim_irq, chopstx_release_irq)
	(chopstx_release_irq_thread): Add spin lock with intr_lock.

	* chopstx.h (chx_intr): Remove member LOCK.

2015-09-07  Niibe Yutaka  <gniibe@fsij.org>

	* example-primer2: New from Kazumoto Kojima.

	* board/board-nitrokey-start.h (VAL_GPIO_USB_ODR)
	(VAL_GPIO_USB_CRL): Fix the values for NeuG settings.

2015-09-04  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/sys.h (BOARD_ID_NITROKEY_START): New.
	* board/board-nitrokey-start.h (BOARD_ID): Fix the value.
	* clk_gpio_init.c (AFIO_MAPR_SWJ_CFG_JTAGDISABLE): New.

2015-08-07  Mateusz Zalega <mateusz@nitrokey.com>

	* board/board-nitrokey-start.h: New.

2015-08-06  Niibe Yutaka  <gniibe@fsij.org>

	* example-fsm-55/README: Updated.

2015-07-31  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.08.
	* doc/chopstx.texi (VERSION): 0.08.

	* example-fsm-55/Makefile (DEFS): Remove HAVE_SYS_H.
	Add MAKE_ENTRY_PUBLIC.
	* example-fsm-55/hacker-emblem.ld: Put vectors on ROM.
	* example-fsm-55/sys.c: No system services.
	* entry.c (entry): Can be public.
	* clk_gpio_init.c [MCU_STM32F0] (clock_init): Don't change CFGR1.

2015-07-30  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-st-nucleo-f103.h: New.  Contributed by Kenji
	Rikitake.

2015-07-29  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-st-dongle.h: New.  Contributed by Kenji Rikitake.

	* board/board-*.h (FLASH_PAGE_SIZE): Remove.

2015-07-28  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb_stm32f103.c: Update from Gnuk.
	* example-cdc/usb_lld.h: Ditto.
	* example-cdc/usb-cdc.c: Follow the change.

2015-07-15  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.07.
	* doc/chopstx.texi (VERSION): 0.07.

2015-07-14  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-*.h (BOARD_ID): New.