@@ -1,3 +1,8 @@
+2015-09-09  Niibe Yutaka  <gniibe@fsij.org>
+
+	* chopstx.c (chx_systick_reset, chx_systick_reload)
+	(chx_systick_get): Factor out systick functions.
+
 2015-09-08  Niibe Yutaka  <gniibe@fsij.org>
 
 	* chopstx.c (chx_request_preemption): Add PRIO argument and check
